# linked_in_poset_generator

./: .gitignore  README.md  pyproject.toml
linked_in_post_generator/: data_pre_processing.py  exception_message.py  few_shot.py  llm_utils.py  main.py  post_creator.py
linked_in_post_generator/data/: processed_data.json  readme.md  source_data.json
