[project]
name = "pythonproject1"
version = "0.1.0"
description = "packages required"
authors = [
    {name = "nashith_vp",email = "vpnashith96@gmail.com"}
]
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-groq (>=1.1.2,<2.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "streamlit (>=1.54.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
